# mbElectricalSystem

./: .gitignore  README  README.md  mbes_front_outputs.kicad_sch  mbes_inputs.kicad_sch  mbes_rear_connector.kicad_sch  motorbike_electrical_system.kicad_pcb  motorbike_electrical_system.kicad_prl  motorbike_electrical_system.kicad_pro  motorbike_electrical_system.kicad_sch
PCB/: .gitignore  Connectors.txt  LICENSE.txt  README  README.md  conn_to_pcbb.kicad_sch  create_fabric_files.sh  main.kicad_pcb  main.kicad_sch  mbes_front_outputs.kicad_sch  mbes_inputs.kicad_sch  mbes_pcbA_connectors.kicad_sch  mbes_rear_connector.kicad_sch  mbes_start_stop.kicad_sch  motorbike_electrical_system.kicad_pcb  motorbike_electrical_system.kicad_prl  motorbike_electrical_system.kicad_pro  motorbike_electrical_system.kicad_sch  pcb-a.kicad_pcb  pcb-a.kicad_sch  pcb-b.kicad_pcb  pcb-b.kicad_sch
PCB/kicad_symbols/CustomConnWire/: SolderWire-0.75sqmm_1x06_P4.2mm_D1.0mm_OD2.2mm.kicad_mod
PCB/kicad_symbols/LH1511BT/: 2024-06-12_06-01-18.kicad_sym
PCB/kicad_symbols/LH1511BT/footprints.pretty/: DIP_1511BT_VIS.kicad_mod
PCB/kicad_symbols/MF-MSMF050-2/: 2025-08-06_09-22-29.kicad_sym
PCB/kicad_symbols/MSMF050-2/: FUSE_F050-2.kicad_mod
PCB/kicad_symbols/TPCA8120,L1Q/: TPCA8120_L1Q.dcm  TPCA8120_L1Q.kicad_sym  TPCA8120_L1Q.lib  TPCA8120_L1Q.mod  TPH4R003NLL1Q.kicad_mod  part_info.txt
PCB/kicad_symbols/TPCA8120,L1Q/3D/: TPCA8120,L1Q.stp
PCB/kicad_symbols/TPCA8120,L1Q/Allegro/: TPH4R003NLL1Q.dra  r105_85.pad  r145_85.pad  r470_375.pad  tph4r003nll1q.psm
PCB/kicad_symbols/TPCA8120,L1Q/Altium/: TPCA8120,L1Q.epw
PCB/kicad_symbols/TPCA8120,L1Q/CADSTAR/: TPCA8120_L1Q.csa  TPCA8120_L1Q.lib  TPH4R003NLL1Q.cpa
PCB/kicad_symbols/TPCA8120,L1Q/CR-5000/: TPCA8120_L1Q.laf
PCB/kicad_symbols/TPCA8120,L1Q/CR-8000/: TPCA8120_L1Q.cdf  TPH4R003NLL1Q.ftf  TPH4R003NLL1Q.pkf
PCB/kicad_symbols/TPCA8120,L1Q/Capture/: TPCA8120_L1Q.xml
PCB/kicad_symbols/TPCA8120,L1Q/DesignSpark PCB/: TPCA8120,L1Q.dsl
PCB/kicad_symbols/TPCA8120,L1Q/DipTrace/: TPCA8120_L1Q.asc
PCB/kicad_symbols/TPCA8120,L1Q/EAGLE/: TPCA8120_L1Q.lbr
PCB/kicad_symbols/TPCA8120,L1Q/OrCAD_Allegro16/: TPCA8120,L1Q.edf  footprint.scr  padstack1.scr  padstack2.scr  padstack3.scr
PCB/kicad_symbols/TPCA8120,L1Q/PADS/: TPCA8120_L1Q.asc  TPCA8120_L1Q.c  TPCA8120_L1Q.p  TPH4R003NLL1Q.d
PCB/kicad_symbols/TPCA8120,L1Q/Proteus/: TPCA8120_L1Q.pdif  TPCA8120_L1Q.pdspart
PCB/kicad_symbols/TPCA8120,L1Q/Pulsonix/: TPCA8120,L1Q.plx
PCB/kicad_symbols/TPCA8120,L1Q/Quadcept/: TPCA8120_L1Q.xml
PCB/kicad_symbols/TPCA8120,L1Q/TARGET 3001!/: TPCA8120_L1Q.cxf
PCB/kicad_symbols/TPCA8120,L1Q/Xpedition/: cell.hkp  padstacks.hkp  pdb.hkp
PCB/kicad_symbols/TPCA8120,L1Q/eCADSTAR/: TPCA8120_L1Q.parta  TPCA8120_L1Q.symba  TPH4R003NLL1Q.foota  TPH4R003NLL1Q.packa
PCB/kicad_symbols/TPCA8120,L1Q/xDX Designer/: TPCA8120_L1Q.1
PCB/kicad_symbols/TPH4R003NL,L1Q/: TPH4R003NLL1Q.kicad_mod  TPH4R003NL_L1Q.dcm  TPH4R003NL_L1Q.lib  TPH4R003NL_L1Q.mod  part_info.txt
PCB/pcb-a/: .gitignore  Makefile  README.md  mbes_pcbA_connectors.kicad_sch  pcb-a.kicad_pcb  pcb-a.kicad_sch
PCB/pcb-b/: README.md  mbes_front_outputs.kicad_sch  pcb-b.kicad_pcb  pcb-b.kicad_sch
PCB/pcb-c/: README.md  pcb-c.kicad_pcb  pcb-c.kicad_sch
PCB/pcb-c/images/: Makefile  connectors.asciiDiag
PCB/starter_key_plug/: README.md  starter_key_plug.kicad_sch
firmware/: .gitignore  Makefile  Makefile-xc8  Makefile.MSWin  Makefile.POSIX  README  create_MakefileDgbSyms.sh  debugTools.h  firmware.c  firmware0-test.c  firmware1-test.c  firmware2-test.c  firmware2a-test.c  firmware3-test.c  firmware4-test.c  firmware5-test.c  firmware6-test.c  firmware7-test.c  firmware7a-test.c  mbElectricalSystem.c  mbesADCengine.c  mbesADCengine.h  mbesHwConfig.h  mbesI2C.c  mbesI2C.h  mbesMCP23008-XP.c  mbesMCP23008-XP.h  mbesMCP23008.c  mbesMCP23008.h  mbesMock.h  mbesPinsMap.h  mbesSelector.c  mbesSelector.h  mbesSerialConsole.c  mbesSerialConsole.h  mbesUtilities.c  mbesUtilities.h
firmware-esp32/: .gitignore  CMakeLists.txt  README  README.md  configUtils.cmake  sdkconfig
firmware-esp32/components/authKey/: CMakeLists.txt  authKey.c
firmware-esp32/components/debugConsoleAPI/: CMakeLists.txt  debugConsoleAPI.c
firmware-esp32/components/debugConsoleAPI/include/: debugConsoleAPI.h
firmware-esp32/components/iInputInterface/: CMakeLists.txt  iInputInterface.c  moduleDB.c
firmware-esp32/components/iInputInterface/include/: iInputInterface.h  mock.h  moduleDB.h
firmware-esp32/components/ravgFilter/: CMakeLists.txt  ravgFilter.c
firmware-esp32/components/werror/: CMakeLists.txt  main.c
firmware-esp32/main/: .c  .gitignore  CMakeLists.txt  clink.sh  firmware-esp32.c  keyAuth_seting.c  mbesPinsMap.h  prod.c  test01.c  test02.c  test02a.c  test03.c  test04.c  test05.c  test06.c  ù
firmware-esp32/tools/debugConsole/: .gitignore  Makefile  README  debugConsole.c  logsStorage.c  logsStorage.h  pinToSymbol.c  pinToSymbol.h  pinsStorage.c  pinsStorage.h  screenUtils.c  screenUtils.h  stringBuilder.c  stringBuilder.h  werror.h
firmware/tests/: Makefile  README  test0-mbesSelector.c  test0-mbesSerialConsole.c  test0-mbesUtilities.c  test0-virtualSelectors.c  virtualSelectors.c
firmware/tools/: .gitignore  Makefile  README  debugConsole.c  debugConsole.h  debugConsole.pl  debugConsoleAPI.c  debugConsole_test.pl  pinToSymbol.c  stringBuilder.c  stringBuilder.h
firmware/tools/test/: stringBuilder_test.c
mechanical_parts/: DR350_rally.dxf  DR350_rally_stainless_steel.dxf  DR350_rearSide.dxf  Koso_instrumentation_attachment.dxf  README  README.md
mechanical_parts/DR350_rally/: README.md
mechanical_parts/DR350_rally/frontSide/: README.md  electricSystemBox.dxf  electricSystemBox_squareBars.dxf  motorbikeFrame_attachment_system.dxf
mechanical_parts/DR350_rally/rearSide/: README.md  electricSystemBox.dxf  electricSystemBox_internalSupports.dxf  electricSystemBox_internalSupports_a.dxf  electricSystemBox_internalSupports_b.dxf
simulation/: mbElectricalSystem.sim1
(+48 files in other folders)
